--- a/src/Pages/main/main.css
+++ b/src/Pages/main/main.css
@@ -1,3 +1,7 @@
+.main-page {
+  overflow: hidden;
+}
+
 /* **************** */
 /* HERO SECTION */
 /* **************** */
