--- a/src/Pages/main/swiper.css
+++ b/src/Pages/main/swiper.css
@@ -9,7 +9,8 @@
 }
 
 .carousel-wrapper {
-  height: 100vh;
+  height: 100%;
+  overflow: hidden;
 }
 
 .swiper-slide {
