--- a/src/gradient.scss
+++ b/src/gradient.scss
@@ -1,13 +1,14 @@
 :root {
-  --color-bg1: rgb(108, 0, 162);
-  --color-bg2: rgb(0, 17, 82);
-  --color1: 18, 113, 255;
-  --color2: 221, 74, 255;
-  --color3: 100, 220, 255;
-  --color4: 200, 50, 50;
-  --color5: 180, 180, 50;
-  --color-interactive: 140, 100, 255;
-  --circle-size: 100vh;
+  --color-bg1: #0c7955;
+  --color-bg2: rgb(12, 133, 153);
+  --color1: 32, 144, 132;
+  --color2: 11, 79, 108;
+
+  --color3: 116, 184, 22;
+  --color4: 55, 178, 77;
+  --color5: 8, 127, 91;
+  --color-interactive: 12, 133, 153;
+  --circle-size: 150vh;
   --blending: hard-light;
 }
 
@@ -53,11 +54,11 @@
 
 .gradient-bg {
   width: 100%;
-  height: 200%;
+  height: 100%;
   overflow: hidden;
   position: absolute;
-  top: 0;
-  left: 0;
+  // top: 0;
+  // left: 0;
   z-index: 0;
 
   svg {
@@ -69,7 +70,7 @@
     filter: url(#goo) blur(40px);
     width: 100%;
     height: 100%;
-    position: relative;
+    // position: relative;
     z-index: -1;
 
     // z-index: -2;
